[package]
name = "flarumdown"
version = "0.5.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "Flarum down - read Markdown!"
keywords = ["archive", "conversion", "static", "dump"]
categories = ["command-line-utilities", "parsing", "text-processing", "value-formatting"]
repository = "https://github.com/YGGverse/flarumdown"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
html-escape = "0.2.13"
log = "0.4.29"
regex = "1.12.3"
rusqlite = { version = "0.39.0", features = ["chrono"]}
strip-tags = "0.1.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
